[package]
name = "vara_orthanc"
version = "0.1.0"
edition = "2021"
authors = ["Narendra Joshi <narendra.joshi@vara.ai"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
libc = "0.2.139"
tracing = "0.1.37"
reqwest = {version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls"]}
serde_json = "1.0.96"
serde = {version = "1.0.96", features = ["derive"] }
threadpool = "1.8.1"



[build-dependencies]
bindgen = "0.64.0"
